--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,19 +9,25 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^13.1.1",
+    "lucide-react": "^0.109.0",
+    "next": "^13.1.6",
+    "next-themes": "^0.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "ui": "workspace:*"
   },
   "devDependencies": {
-    "@babel/core": "^7.0.0",
-    "eslint-config-custom": "workspace:*",
+    "@babel/core": "^7.20.12",
+    "@types/node": "^17.0.45",
+    "@types/react": "^18.0.27",
+    "@types/react-dom": "^18.0.10",
+    "autoprefixer": "^10.4.13",
     "eslint": "7.32.0",
+    "eslint-config-custom": "workspace:*",
+    "postcss": "^8.4.21",
+    "tailwind-config": "workspace:*",
+    "tailwindcss": "^3.2.4",
     "tsconfig": "workspace:*",
-    "@types/node": "^17.0.12",
-    "@types/react": "^18.0.22",
-    "@types/react-dom": "^18.0.7",
-    "typescript": "^4.5.3"
+    "typescript": "^4.9.5"
   }
 }
