--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tremor/react": "^1.6.1",
     "lucide-react": "^0.109.0",
     "next": "^13.1.6",
     "next-themes": "^0.2.1",
