--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -4,13 +4,13 @@
   "main": "index.js",
   "license": "MIT",
   "dependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-next": "13.0.0",
+    "eslint-config-next": "latest",
     "eslint-config-prettier": "^8.6.0",
     "eslint-config-turbo": "latest",
-    "eslint-plugin-react": "7.31.8"
+    "eslint-plugin-react": "^7.32.2"
   },
   "devDependencies": {
+    "eslint": "^8.33.0",
     "typescript": "^4.9.5"
   },
   "publishConfig": {
