--- a/packages/tailwind-config/package.json
+++ b/packages/tailwind-config/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "main": "index.js",
   "devDependencies": {
+    "postcss": "^8.4.21",
     "tailwindcss": "^3.2.4",
     "tailwindcss-animate": "^1.0.5"
   }
