--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,31 +3,31 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo",
+    "dev": "next dev --turbo -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@tremor/react": "^1.7.0",
+    "@tremor/react": "^1.8.0",
     "lucide-react": "^0.109.0",
-    "next": "^13.1.6",
+    "next": "^13.2.1",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "ui": "workspace:*"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.12",
-    "@types/node": "^18.13.0",
-    "@types/react": "^18.0.27",
-    "@types/react-dom": "^18.0.10",
+    "@babel/core": "^7.21.0",
+    "@types/node": "^18.14.1",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.33.0",
+    "eslint": "^8.34.0",
     "eslint-config-custom": "workspace:*",
     "postcss": "^8.4.21",
     "tailwind-config": "workspace:*",
-    "tailwindcss": "^3.2.6",
+    "tailwindcss": "^3.2.7",
     "tsconfig": "workspace:*",
     "typescript": "^4.9.5"
   }
