--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -9,9 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@tremor/react": "^1.8.0",
+    "@radix-ui/react-scroll-area": "^1.0.2",
+    "@tremor/react": "^1.8.1",
     "lucide-react": "^0.109.0",
-    "next": "^13.2.1",
+    "next": "^13.2.3",
     "next-themes": "^0.2.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -19,11 +20,11 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
-    "@types/node": "^18.14.1",
+    "@types/node": "^18.14.4",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.13",
-    "eslint": "^8.34.0",
+    "eslint": "^8.35.0",
     "eslint-config-custom": "workspace:*",
     "postcss": "^8.4.21",
     "tailwind-config": "workspace:*",
