--- a/packages/eslint-config-custom/package.json
+++ b/packages/eslint-config-custom/package.json
@@ -3,15 +3,13 @@
   "version": "0.0.0",
   "main": "index.js",
   "license": "MIT",
-  "dependencies": {
+  "devDependencies": {
+    "eslint": "^8.38.0",
     "eslint-config-next": "latest",
     "eslint-config-prettier": "^8.8.0",
     "eslint-config-turbo": "latest",
-    "eslint-plugin-react": "^7.32.2"
-  },
-  "devDependencies": {
-    "eslint": "^8.38.0",
-    "typescript": "^4.9.5"
+    "eslint-plugin-react": "^7.32.2",
+    "typescript": "^5.0.4"
   },
   "publishConfig": {
     "access": "public"
