--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -3,13 +3,12 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbo -p 4000",
+    "dev": "next dev -p 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
-    "@radix-ui/react-scroll-area": "^1.0.3",
     "@tremor/react": "^2.1.0",
     "lucide-react": "^0.139.0",
     "next": "^13.3.0",
@@ -19,12 +18,10 @@
     "ui": "workspace:*"
   },
   "devDependencies": {
-    "@babel/core": "^7.21.4",
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.34",
     "@types/react-dom": "^18.0.11",
     "autoprefixer": "^10.4.14",
-    "eslint": "^8.38.0",
     "eslint-config-custom": "workspace:*",
     "postcss": "^8.4.21",
     "tailwind-config": "workspace:*",
