feat: update packages

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,9 +22,9 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
-    "eslint-config-custom": "workspace:*",
+    "@repo/config-eslint": "workspace:*",
     "postcss": "^8.4.38",
-    "tailwind-config": "workspace:*",
+    "@repo/config-tailwind": "workspace:*",
     "tailwindcss": "^3.4.3",
     "@repo/config-typescript": "workspace:*",
     "typescript": "^5.4.5"
