--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -8,46 +8,46 @@
     "lint": "eslint *.ts*"
   },
   "devDependencies": {
-    "@types/react": "^18.0.34",
-    "@types/react-dom": "^18.0.11",
-    "eslint": "8.57.0",
+    "@types/react": "^18.3.1",
+    "@types/react-dom": "^18.3.0",
+    "eslint": "^9.2.0",
     "@repo/config-eslint": "workspace:*",
-    "react": "18.3.1",
-    "react-dom": "18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "18.3.1",
     "@repo/config-tailwind": "workspace:*",
     "@repo/config-typescript": "workspace:*",
-    "typescript": "5.4.5"
+    "typescript": "^5.4.5"
   },
   "dependencies": {
-    "@radix-ui/react-accessible-icon": "^1.0.2",
-    "@radix-ui/react-accordion": "^1.1.1",
-    "@radix-ui/react-alert-dialog": "^1.0.3",
-    "@radix-ui/react-aspect-ratio": "^1.0.2",
-    "@radix-ui/react-avatar": "^1.0.2",
-    "@radix-ui/react-checkbox": "^1.0.3",
-    "@radix-ui/react-collapsible": "^1.0.2",
-    "@radix-ui/react-context-menu": "^2.1.3",
-    "@radix-ui/react-dialog": "^1.0.3",
-    "@radix-ui/react-dropdown-menu": "^2.0.4",
-    "@radix-ui/react-hover-card": "^1.0.5",
-    "@radix-ui/react-label": "^2.0.1",
-    "@radix-ui/react-menubar": "^1.0.2",
-    "@radix-ui/react-navigation-menu": "^1.1.2",
-    "@radix-ui/react-popover": "^1.0.5",
-    "@radix-ui/react-progress": "^1.0.2",
-    "@radix-ui/react-radio-group": "^1.1.2",
-    "@radix-ui/react-scroll-area": "^1.0.3",
+    "@radix-ui/react-accessible-icon": "^1.0.3",
+    "@radix-ui/react-accordion": "^1.1.2",
+    "@radix-ui/react-alert-dialog": "^1.0.5",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-avatar": "^1.0.4",
+    "@radix-ui/react-checkbox": "^1.0.4",
+    "@radix-ui/react-collapsible": "^1.0.3",
+    "@radix-ui/react-context-menu": "^2.1.5",
+    "@radix-ui/react-dialog": "^1.0.5",
+    "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-hover-card": "^1.0.7",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-menubar": "^1.0.4",
+    "@radix-ui/react-navigation-menu": "^1.1.4",
+    "@radix-ui/react-popover": "^1.0.7",
+    "@radix-ui/react-progress": "^1.0.3",
+    "@radix-ui/react-radio-group": "^1.1.3",
+    "@radix-ui/react-scroll-area": "^1.0.5",
     "@radix-ui/react-select": "^2.0.0",
-    "@radix-ui/react-separator": "^1.0.2",
-    "@radix-ui/react-slider": "^1.1.1",
-    "@radix-ui/react-slot": "^1.0.1",
-    "@radix-ui/react-switch": "^1.0.2",
-    "@radix-ui/react-tabs": "^1.0.3",
-    "@radix-ui/react-toggle-group": "^1.0.3",
-    "@radix-ui/react-tooltip": "^1.0.5",
+    "@radix-ui/react-separator": "^1.0.3",
+    "@radix-ui/react-slider": "^1.1.2",
+    "@radix-ui/react-slot": "^1.0.2",
+    "@radix-ui/react-switch": "^1.0.3",
+    "@radix-ui/react-tabs": "^1.0.4",
+    "@radix-ui/react-toggle-group": "^1.0.4",
+    "@radix-ui/react-tooltip": "^1.0.7",
     "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "lucide-react": "^0.376.0",
-    "tailwind-merge": "^2.0.0"
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.378.0",
+    "tailwind-merge": "^2.3.0"
   }
 }
